k8s/base/drone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kayori-drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kayori-drone
  template:
    metadata:
      labels:
        app: kayori-drone
    spec:
      containers:
      - name: kayori-drone
        image: kayori/drone:latest
        imagePullPolicy: Never
